# dicestats

./: .gitignore  LICENSE  README.md  dicestats.cabal  dicestats.hs  generator.hs
src/: Generator.hs  Main.hs  filter.hs
tests/: HUnitTests.hs  tests.hs
