name:                dicestats
version:             1.0.0
synopsis:            Generate statistics about the rolling of fair dice
-- description:
homepage:            https://github.com/mafagafogigante/dicestats
license:             BSD2
license-file:        LICENSE
author:              Bernardo Sulzbach
maintainer:          mafagafogigante@gmail.com
-- copyright:
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

executable dicestats
  main-is:              Main.hs
  -- other-modules:
  other-modules:        Generator
  default-extensions:   OverloadedStrings
  -- other-extensions:
  build-depends:        base >= 4.8 && < 4.9, containers == 0.5.6.2
  hs-source-dirs:       src
  default-language:     Haskell2010

test-suite tests
  type:                 exitcode-stdio-1.0
  main-is:              HUnitTests.hs
  -- other-modules:
  other-modules:        Generator
  ghc-options:          -Wall
  default-extensions:   OverloadedStrings
  -- other-extensions:
  build-depends:        base, hspec >= 1.8, HUnit
  hs-source-dirs:       src, tests
  default-language:     Haskell2010
